Fixed some data bugs with list/query tool